tests/sksl/errors/Ossfuzz36850.asm.frag
### Compilation failed:

error: 1: unsized arrays are not permitted here
T { int x; } f[];
               ^
1 error
